2003-09-07  Pavel Roskin  <proski@gnu.org>

	* dlg.h: Convert send_idle_msg field to a publicly visible flag
	DLG_WANT_IDLE.
	* main.c (midnight_callback): Move auto_menu handling to the
	handler for DLG_IDLE.
	(do_nc): Request idle events.

2003-09-06  Pavel Roskin  <proski@gnu.org>

	* dlg.c: Fix a bug when DLG_HOTKEY_HANDLED would not be
	delivered if the current widget already has focus.

2003-09-04  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* user.c (execute_menu_command): Implement %view macro.

2003-09-03  Pavel Roskin  <proski@gnu.org>

	* wtools.c (create_listbox_window): Don't repaint the dialog
	before it's run.

	* learn.c: Don't track button hotkeys.
	(learn_check_key): Consume all alphanumeric keys, regardless of
	button hotkeys.

2003-09-01  Pavel Roskin  <proski@gnu.org>

	* listmode.c: Create all buttons in one place.  Remove unneeded
	low-level drawing.
	(listmode_edit): Return NULL on cancel.
	* main.c (listmode_cmd): Actually use the result of
	listmode_edit().

	* listmode.c: Use callbacks for Add and Remove buttons.  Don't
	run dialog in the loop, it doesn't work this way.

	* widget.h: Define type bcback for button callbacks.

	* widget.c (listbox_new): Remove "action" argument.  Listboxes
	without callbacks default to closing the dialog.  Adjust all
	users.  This fixes double click on completion listbox.
	* widget.h: Use uppercase names for the return values of the
	listbox callback.

	* hotlist.c (update_path_name): Avoid using global variable.
	(l_call): Likewise.

	* widget.h: Eliminate listbox_cback.  Call listbox callback
	whenever it's defined.  Adjust all users.

	* widget.h: Use exact type in the listbox callback.  Adjust all
	legitimate users, remove all unused callbacks.

	* boxes.c: Fix GUI code for some non-default configurations.
	* listmode.c: Likewise.

2003-08-31  Pavel Roskin  <proski@gnu.org>

	* widget.h (button_new): Remove unused extra argument.  Adjust
	all dependencies.

	* option.c (check_options): Remove tk field.